--- a/home.html
+++ b/home.html
@@ -231,12 +231,19 @@
 					
 
       <div class="ms-hero-page-override ms-hero-img-home ms-hero-bg-primary mb-6">
-        <!--Hero Banner Title
-		  <div class="container">
-          <div class="text-center">
-            <h1 class="no-m ms-site-title color-white center-block ms-site-title-lg mt-2 animated zoomInDown animation-delay-5">ectlecta</h1>
-          </div>
-        </div> -->
+        <!--PAGE TITLE OVER HERO IMAGE-->
+                <div class="ms-footbar-title" style="padding-top: 1rem ">
+				 <div class="container">
+				  <div class="text-center">
+					<span class="ms-logo1 ms-logo-sm">e
+					</span>
+					<span style="vertical-align: middle;">
+						<strong style="font-size: 9rem; font-weight: 800; color: #006577; vertical-align: middle">ctlecta</strong>
+					</span>
+				  </div>
+				</div>
+			  </div>	
+        </div>
       </div>
 		
       <div class="container">
@@ -628,8 +635,7 @@
         </header>
         <ul class="ms-slidebar-menu" id="slidebar-menu" role="tablist" aria-multiselectable="true">
           <li class="card" role="tab" id="sch1">
-            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#slidebar-menu" href="#sc1" aria-expanded="false" aria-controls="sc1">
-              <i class="zmdi zmdi-home"></i> Home </a>
+            <a href="home.html"> Home </a>
           </li>
           <li class="card" role="tab" id="sch2">
             <a class="collapsed" role="button" data-toggle="collapse" data-parent="#slidebar-menu" href="#sc2" aria-expanded="false" aria-controls="sc2">
