REMOVES: - extraneous assets from the revolution plugin
ADDS:
- Updates to design on recipe-master and code commetns

--- a/recipe-master.html
+++ b/recipe-master.html
@@ -242,8 +242,8 @@
         <div class="container">
           <div class="text-center">
             <h1 class="no-m ms-site-title color-white center-block ms-site-title-lg mt-2 animated zoomInDown animation-delay-5">[RECIPE NAME]</h1>
-            <p class="lead lead-lg color-light text-center center-block mt-2 mw-800 text-uppercase fw-300 animated fadeInUp animation-delay-7 mb-4">Discover the most
-              <span class="color-warning">important milestones</span> of our projects. Our commitment is always the maximum in every project for a timely and quality delivery.</p>
+            <p class="lead lead-lg color-light text-center center-block mt-2 mw-800 text-uppercase fw-300 animated fadeInUp animation-delay-7 mb-4" style="padding-bottom: 1rem">
+              <span class="colorred">TOTAL TIME (active time)</span></p>
           </div>
         </div>
       </div> 
@@ -253,17 +253,62 @@
 
 	   <div class="col-md-12 card card-info wow fadeInUp">
 		   <section class="row">
-				<div class="col-md-8">
-				<div class="card-block">
-                	<h2>Ingredients</h2>
-					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus numquam, voluptatibus tempore sint nesciunt id accusantium corporis ea assumenda iure quos, temporibus accusamus cupiditate eveniet mollitia illum ipsum porro aut.</p>
-            	</div>
-		  		</div>
-				<div class="col-md-4 right">
-				<div class="card-block">
-					<h2>Tools</h2>
-                	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus numquam, voluptatibus tempore sint nesciunt id accusantium corporis ea assumenda iure quos, temporibus accusamus cupiditate eveniet mollitia illum ipsum porro aut.</p>
-            	</div>
+				<div class="col-md-7">
+  				<div class="card-block">
+           <h2 class="colorred">Ingredients</h2>
+
+              <section class="row">
+                <div class="col-md-4">
+          					<ul style="text-align: left">
+                      <li>Lorem ipsum 
+                      </li>
+                      <li>dolor sit amet 
+                      </li>
+                      <li>consectetur adipisicing 
+                      </li>
+                      <li>sit amet
+                      </li>
+                    </ul>
+                </div>
+                <div class="col-md-4 right">
+                    <ul style="text-align: left">
+                      <li>Lorem ipsum 
+                      </li>
+                      <li>dolor sit amet 
+                      </li>
+                      <li>consectetur adipisicing 
+                      </li>
+                      <li>sit amet
+                      </li>
+                    </ul>
+                </div>
+                <div class="col-md-4 right">
+                    <ul style="text-align: left">
+                      <li>Lorem ipsum 
+                      </li>
+                      <li>dolor sit amet 
+                      </li>
+                      <li>consectetur adipisicing 
+                      </li>
+                      <li>sit amet
+                      </li>
+                    </ul>
+                </div>
+              </section>
+
+
+          </div>
+		  	</div>
+				<div class="col-md-5 right">
+  				<div class="card-block">
+  					<h2 class="colorred">Tools</h2>
+            <ul style="text-align: center; display: inline-block;">
+              <li>Lorem ipsum 
+              </li>
+              <li>dolor sit amet 
+              </li>
+            </ul>
+          </div>
 				</div>
 		   </section>
 				<div class="card-block">
@@ -320,7 +365,7 @@
 					<article class="card card-info timeline-center-item right wow fadeInUp">
 					  <header class="card-header">
 						<h3 class="card-title">
-						  </i> STEP 1</h3>
+					   STEP 1</h3>
 					  </header>
 
 <!-- RECIPE STEP HEADER -->
