--- a/recipe-master.html
+++ b/recipe-master.html
@@ -18,7 +18,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
       <meta name="theme-color" content="#333">
-      <title>ectlecta - travel</title>
+      <title>ectlecta - [RECIPE MASTER]</title>
       <meta name="description" content="Material Style Theme">
       <link rel="shortcut icon" href="assets/img/favicon.png?v=3">
       <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -312,13 +312,9 @@
 				</div>
 		   </section>
 				<div class="card-block">
-                	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus numquam, voluptatibus tempore sint nesciunt id accusantium corporis ea assumenda iure quos, temporibus accusamus cupiditate eveniet mollitia illum ipsum porro aut.</p>
-            	</div>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus numquam, voluptatibus tempore sint nesciunt id accusantium corporis ea assumenda iure quos, temporibus accusamus cupiditate eveniet mollitia illum ipsum porro aut.</p>
+        </div>
 		</div>
-		  
-        <h1 class="text-center col-md-12">
-          <span class="badge badge-primary">Steps</span>
-        </h1>
 		  
 <!-- RECIPE STEP -->
 
@@ -372,19 +368,32 @@
 
 					  <div class="card-block">
               <section class="row">
-                <div class="col-md-6">
-                  <div class="card-block">
-                      <h2>Ingredients</h2>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus numquam, voluptatibus tempore sint nesciunt id accusantium corporis ea assumenda iure quos, temporibus accusamus cupiditate eveniet mollitia illum ipsum porro aut.</p>
-                  </div>
+                <div class="col-md-7">
+                 <h2 class="colorred">Ingredients</h2>
+                    <section class="row">
+                          <ul style="text-align: center; display: inline-block;">
+                            <li>Lorem ipsum 
+                            </li>
+                            <li>dolor sit amet 
+                            </li>
+                            <li>consectetur adipisicing 
+                            </li>
+                            <li>sit amet
+                            </li>
+                          </ul>
+                    </section>
                 </div>
-                  <div class="col-md-6 right">
-                    <div class="card-block">
-                      <h2>Tools</h2>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus numquam, voluptatibus tempore sint nesciunt id accusantium corporis ea assumenda iure quos, temporibus accusamus cupiditate eveniet mollitia illum ipsum porro aut.</p>
-                    </div>
-                  </div>
-              </section>
+                <div class="col-md-5">
+                 <h2 class="colorred">Tools</h2>
+                    <section class="row">
+                          <ul style="text-align: center; display: inline-block;">
+                            <li>Lorem ipsum 
+                            </li>
+                            <li>dolor sit amet 
+                            </li>
+                          </ul>
+                    </section>
+                </div>
 
 <!-- STEP INSTRUCTIONS -->
 
