Update to Hamburger Menu

--- a/home.html
+++ b/home.html
@@ -646,24 +646,24 @@
             </div>
           </div>
         </header>
-        <ul id="sc1" class="" role="tabpanel" aria-labelledby="sch1" style="">
+        <ul class="ms-slidebar-menu" id="slidebar-menu" role="tablist" aria-multiselectable="true">
           <li class="card">
-            <a href="home.html">HOME</a>
+            <a class="link colorred" href="home.html">HOME</a>
           </li>
-          <li class="card" >
-            <a href="host.html"> HOST </a>
+          <li>
+            <a href="host.html" class="link"> HOST </a>
           </li>
-          <li class="card" >
-            <a href="cook.html"> COOK </a>
+          <li>
+            <a href="cook.html" class="link"> COOK </a>
           </li>          
-          <li class="card" >
-            <a href="references.html"> INDEX </a>
+          <li>
+            <a href="references.html" class="link"> INDEX </a>
           </li>
-          <li class="card">
-            <a href="local.html"> LOCAL </a>
+          <li>
+            <a href="local.html" class="link"> LOCAL </a>
           </li>
-          <li class="card" role="tab" id="sch2">
-            <a href="travel.html"> TRAVEL </a>
+          <li>
+            <a href="travel.html" class="link"> TRAVEL </a>
           </li>
 
         </ul>
