--- a/recipe-master.html
+++ b/recipe-master.html
@@ -604,134 +604,25 @@
           </div>
         </header>
         <ul class="ms-slidebar-menu" id="slidebar-menu" role="tablist" aria-multiselectable="true">
-          <li class="card" role="tab" id="sch1">
-            <a href="home.html"> Home </a>
-          </li>
-          <li class="card" role="tab" id="sch2">
-            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#slidebar-menu" href="#sc2" aria-expanded="false" aria-controls="sc2">
-              <i class="zmdi zmdi-desktop-mac"></i> Pages </a>
-            <ul id="sc2" class="card-collapse collapse" role="tabpanel" aria-labelledby="sch2">
-              <li>
-                <a href="page-about.html">About US</a>
-              </li>
-              <li>
-                <a href="page-team.html">Our Team</a>
-              </li>
-              <li>
-                <a href="page-product.html">Products</a>
-              </li>
-              <li>
-                <a href="page-services.html">Services</a>
-              </li>
-              <li>
-                <a href="page-faq.html">FAQ</a>
-              </li>
-              <li>
-                <a href="page-timeline_left.html">Timeline</a>
-              </li>
-              <li>
-                <a href="page-contact.html">Contact Option</a>
-              </li>
-              <li>
-                <a href="page-login.html">Login</a>
-              </li>
-              <li>
-                <a href="page-pricing.html">Pricing</a>
-              </li>
-              <li>
-                <a href="page-coming.html">Coming Soon</a>
-              </li>
-            </ul>
-          </li>
-          <li class="card" role="tab" id="sch4">
-            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#slidebar-menu" href="#sc4" aria-expanded="false" aria-controls="sc4">
-              <i class="zmdi zmdi-edit"></i> Blog </a>
-            <ul id="sc4" class="card-collapse collapse" role="tabpanel" aria-labelledby="sch4">
-              <li>
-                <a href="blog-sidebar.html">Blog Sidebar 1</a>
-              </li>
-              <li>
-                <a href="blog-sidebar2.html">Blog Sidebar 2</a>
-              </li>
-              <li>
-                <a href="blog-masonry.html">Blog Masonry 1</a>
-              </li>
-              <li>
-                <a href="blog-masonry2.html">Blog Masonry 2</a>
-              </li>
-              <li>
-                <a href="blog-full.html">Blog Full Page 1</a>
-              </li>
-              <li>
-                <a href="blog-full2.html">Blog Full Page 2</a>
-              </li>
-              <li>
-                <a href="blog-post.html">Blog Post 1</a>
-              </li>
-              <li>
-                <a href="blog-post2.html">Blog Post 2</a>
-              </li>
-            </ul>
-          </li>
-          <li class="card" role="tab" id="sch5">
-            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#slidebar-menu" href="#sc5" aria-expanded="false" aria-controls="sc5">
-              <i class="zmdi zmdi-shopping-basket"></i> E-Commerce </a>
-            <ul id="sc5" class="card-collapse collapse" role="tabpanel" aria-labelledby="sch5">
-              <li>
-                <a href="ecommerce-filters.html">E-Commerce Sidebar</a>
-              </li>
-              <li>
-                <a href="ecommerce-filters-full.html">E-Commerce Sidebar Full</a>
-              </li>
-              <li>
-                <a href="ecommerce-filters-full2.html">E-Commerce Topbar Full</a>
-              </li>
-              <li>
-                <a href="ecommerce-item.html">E-Commerce Item</a>
-              </li>
-              <li>
-                <a href="ecommerce-cart.html">E-Commerce Cart</a>
-              </li>
-            </ul>
-          </li>
-          <li class="card" role="tab" id="sch6">
-            <a class="collapsed" role="button" data-toggle="collapse" data-parent="#slidebar-menu" href="#sc6" aria-expanded="false" aria-controls="sc6">
-              <i class="zmdi zmdi-collection-image-o"></i> Portfolio </a>
-            <ul id="sc6" class="card-collapse collapse" role="tabpanel" aria-labelledby="sch6">
-              <li>
-                <a href="portfolio-filters_sidebar.html">Portfolio Sidebar Filters</a>
-              </li>
-              <li>
-                <a href="portfolio-filters_topbar.html">Portfolio Topbar Filters</a>
-              </li>
-              <li>
-                <a href="portfolio-filters_sidebar_fluid.html">Portfolio Sidebar Fluid</a>
-              </li>
-              <li>
-                <a href="portfolio-filters_topbar_fluid.html">Portfolio Topbar Fluid</a>
-              </li>
-              <li>
-                <a href="portfolio-cards.html">Porfolio Cards</a>
-              </li>
-              <li>
-                <a href="portfolio-masonry.html">Porfolio Masonry</a>
-              </li>
-              <li>
-                <a href="portfolio-item.html">Portfolio Item 1</a>
-              </li>
-              <li>
-                <a href="portfolio-item2.html">Portfolio Item 2</a>
-              </li>
-            </ul>
+          <li class="card">
+            <a class="link colorred" href="home.html">HOME</a>
           </li>
           <li>
-            <a class="link" href="component-typography.html">
-              <i class="zmdi zmdi-view-compact"></i> UI Elements</a>
+            <a href="host.html" class="link"> HOST </a>
           </li>
           <li>
-            <a class="link" href="page-all.html">
-              <i class="zmdi zmdi-link"></i> All Pages</a>
+            <a href="cook.html" class="link"> COOK </a>
+          </li>          
+          <li>
+            <a href="references.html" class="link"> INDEX </a>
           </li>
+          <li>
+            <a href="local.html" class="link"> LOCAL </a>
+          </li>
+          <li>
+            <a href="travel.html" class="link"> TRAVEL </a>
+          </li>
+
         </ul>
         <div class="ms-slidebar-social ms-slidebar-block">
           <h4 class="ms-slidebar-block-title">Social Links</h4>
