--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,4 @@
+<!-- BEGIN FOOTER -->
       <aside class="ms-footbar">
         <div class="container">
           <div class="row">
@@ -20,17 +21,17 @@
               <div class="ms-footbar-block">
                 <h3 class="ms-footbar-title text-center mb-2">Get in Touch</h3>
                 <div class="ms-footer-media">
-				  <p>
+          <p>
                     <i class="color-info zmdi zmdi-email mr-1"></i>
                     <strong>General Inquires:</strong>
                     <a href="mailto:joe@example.com">@ectlecta.com</a>
                   </p>
-				  <p>
+          <p>
                     <i class="color-info zmdi zmdi-email mr-1"></i>
                     <strong>Suggestions:</strong>
                     <a href="mailto:joe@example.com">ideas@ectlecta.com</a>
                   </p>
-				  <p>
+          <p>
                     <i class="color-info zmdi zmdi-email mr-1"></i>
                     <strong>Bugs / Broken Pages:</strong>
                     <a href="mailto:joe@example.com">bugs@ectlecta.com</a>
@@ -72,3 +73,5 @@
           <i class="zmdi zmdi-long-arrow-up"></i>
         </a>
       </div>
+    </div>
+  <!-- END FOOTER -->
