added carousel-img class to the carousel images in home.

--- a/home.html
+++ b/home.html
@@ -272,21 +272,21 @@
               </ol>
               <!-- Wrapper for slides -->
               <div class="carousel-inner" role="listbox">
-                <div class="carousel-item active">
+                <div class="carousel-item active carousel-img">
                   <img src="assets/img/seabasscover.jpg" class="img-fluid" alt="...">
                   <div class="carousel-caption-blog">
                     <h2 class="color-secondary" style="">SEABASS</h2>
                     <p class="d-none d-md-block" style="font-size: 2rem">tomato water | watermelon | mint  </p>
                   </div>
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item carousel-img">
                   <img src="assets/img/mintpestocover.jpg" class="img-fluid" alt="...">
                   <a href="https://www.google.com"><div class="carousel-caption-blog">
                     <h2 class="color-secondary">MINT PESTO</h2>
                     <p class="d-none d-md-block" style="font-size: 2rem">lamb meatballs | fresh pasta | goat cheese </p>
 					</div></a>
                 </div>
-                <div class="carousel-item">
+                <div class="carousel-item carousel-img">
                   <img src="assets/img/steaktacos.jpeg" class="img-fluid" alt="...">
                   <div class="carousel-caption-blog">
                     <h2 class="color-secondary">STEAK TACOS</h2>
