Updates to Recipe Master

--- a/recipe-master.html
+++ b/recipe-master.html
@@ -369,7 +369,7 @@
 					  <div class="card-block">
               <section class="row">
                 <div class="col-md-7">
-                 <h2 class="colorred">Ingredients</h2>
+                 <h2 class="colorblue">Ingredients</h2>
                     <section class="row">
                           <ul style="text-align: center; display: inline-block;">
                             <li>Lorem ipsum 
@@ -384,7 +384,7 @@
                     </section>
                 </div>
                 <div class="col-md-5">
-                 <h2 class="colorred">Tools</h2>
+                 <h2 class="colorblue">Tools</h2>
                     <section class="row">
                           <ul style="text-align: center; display: inline-block;">
                             <li>Lorem ipsum 
@@ -470,19 +470,32 @@
 
             <div class="card-block">
               <section class="row">
-                <div class="col-md-6">
-                  <div class="card-block">
-                      <h2>Ingredients</h2>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus numquam, voluptatibus tempore sint nesciunt id accusantium corporis ea assumenda iure quos, temporibus accusamus cupiditate eveniet mollitia illum ipsum porro aut.</p>
-                  </div>
+                <div class="col-md-7">
+                 <h2 class="colorblue">Ingredients</h2>
+                    <section class="row">
+                          <ul style="text-align: center; display: inline-block;">
+                            <li>Lorem ipsum 
+                            </li>
+                            <li>dolor sit amet 
+                            </li>
+                            <li>consectetur adipisicing 
+                            </li>
+                            <li>sit amet
+                            </li>
+                          </ul>
+                    </section>
                 </div>
-                  <div class="col-md-6 right">
-                    <div class="card-block">
-                      <h2>Tools</h2>
-                      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus numquam, voluptatibus tempore sint nesciunt id accusantium corporis ea assumenda iure quos, temporibus accusamus cupiditate eveniet mollitia illum ipsum porro aut.</p>
-                    </div>
-                  </div>
-              </section>
+                <div class="col-md-5">
+                 <h2 class="colorblue">Tools</h2>
+                    <section class="row">
+                          <ul style="text-align: center; display: inline-block;">
+                            <li>Lorem ipsum 
+                            </li>
+                            <li>dolor sit amet 
+                            </li>
+                          </ul>
+                    </section>
+                </div>
 
 <!-- STEP INSTRUCTIONS -->
 
