Update to Recipe Master Commets and style
Matched Yorkshire to Recipe Master style

--- a/Recipes/RECIPE - YORKSHIRE PUDDING.html
+++ b/Recipes/RECIPE - YORKSHIRE PUDDING.html
@@ -253,8 +253,8 @@
 
 	   <div class="col-md-12 card card-info wow fadeInUp">
 		   <section class="row">
-				<div class="col-md-8">
-  				<div class="card-block">
+				<div class="col-md-8" style="padding-right: 0px;">
+  				<div class="card-block" style="padding-right: 0px;">
            <h2 class="colorred">Ingredients</h2>
 
               <section class="row" style="justify-content: center;">
@@ -283,10 +283,10 @@
 
           </div>
 		  	</div>
-				<div class="col-md-4 right">
-  				<div class="card-block">
+				<div class="col-md-4 right" style="padding-left: 0px;">
+  				<div class="card-block" style="padding-left: 0px;">
   					<h2 class="colorred">Tools</h2>
-            <ul style="text-align: center; display: inline-block;">
+            <ul class="recipe-header">
               <li>Immersion Blender</li>
               <li>Blender</li>
               <li>Oven</li>
@@ -295,7 +295,7 @@
           </div>
 				</div>
 		   </section>
-        <hr class="color double">
+        <hr class="color double tight-margin">
          <h2 class="colorred">Notes:</h2>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Possimus numquam, voluptatibus tempore sint nesciunt id accusantium corporis ea assumenda iure quos, temporibus accusamus cupiditate eveniet mollitia illum ipsum porro aut.</p>
 		</div>
@@ -331,8 +331,8 @@
               <section class="row">
                 <div class="col-md-7">
                  <h2 class="colorblue">Ingredients</h2>
-                    <section class="row recipe-header">
-                          <ul">
+                    <section class="row recipe-header" style="padding-right: 0px;">
+                          <ul class="recipe-header" style="padding-right: 0px;">
                             <li>100g Whole Milk  (100%) <!--[give brand req?]--></li>
                             <li>4g sodium citrate (4%)</li>
                             <li>75g Cheddar (75%)</li>
@@ -342,8 +342,8 @@
                 </div>
                 <div class="col-md-5">
                  <h2 class="colorblue">Tools</h2>
-                    <section class="row recipe-header">
-                          <ul>
+                    <section class="row recipe-header" style="padding-left: 0px;">
+                          <ul class="recipe-header" style="padding-left: 0px;">
                             <li>Immersion Blender
                             </li>
                           </ul>
@@ -398,8 +398,9 @@
               <section class="row">
                 <div class="col-md-7">
                  <h2 class="colorblue">Ingredients</h2>
-                    <section class="row recipe-header">
-                          <ul">
+                    <section class="row recipe-header" style="padding-left: 0px;">
+                          <ul class="recipe-header" style="padding-left: 0px;">
+
                             <li>75g Whole Milk</li>
                             <li>150g AP Flour</li>
                             <li>4 Eggs</li>
@@ -412,8 +413,9 @@
                 </div>
                 <div class="col-md-5">
                  <h2 class="colorblue">Tools</h2>
-                    <section class="row recipe-header">
-                          <ul>
+                    <section class="row recipe-header" style="padding-left: 0px;">
+                          <ul class="recipe-header" style="padding-left: 0px;">
+
                             <li>Blender
                             </li>
                           </ul>
@@ -465,16 +467,18 @@
               <section class="row">
                 <div class="col-md-7">
                  <h2 class="colorblue">Ingredients</h2>
-                    <section class="row recipe-header">
-                          <ul>
+                    <section class="row recipe-header" style="padding-left: 0px;">
+                          <ul class="recipe-header" style="padding-left: 0px;">
+
                             <li>100ml (20 tsp) Beef Tallow</li>
                           </ul>
                     </section>
                 </div>
                 <div class="col-md-5">
                  <h2 class="colorblue">Tools</h2>
-                    <section class="row recipe-header">
-                          <ul>
+                    <section class="row recipe-header" style="padding-left: 0px;">
+                          <ul class="recipe-header" style="padding-left: 0px;">
+
                             <li>Oven
                             </li>
                             <li>Muffin Tin</li>
@@ -530,16 +534,18 @@
               <section class="row">
                 <div class="col-md-7">
                  <h2 class="colorblue">Ingredients</h2>
-                    <section class="row recipe-header">
-                          <ul>
+                    <section class="row recipe-header" style="padding-left: 0px;">
+                          <ul class="recipe-header" style="padding-left: 0px;">
+
                             <li>Yorkshire Pudding Batter (from Step 2)</li>
                           </ul>
                     </section>
                 </div>
                 <div class="col-md-5">
                  <h2 class="colorblue">Tools</h2>
-                    <section class="row recipe-header">
-                          <ul>
+                    <section class="row recipe-header" style="padding-left: 0px;">
+                          <ul class="recipe-header" style="padding-left: 0px;">
+
                             <li>Muffin Tin</li>
                           </ul>
                     </section>
@@ -593,16 +599,18 @@
               <section class="row">
                 <div class="col-md-7">
                  <h2 class="colorblue">Ingredients</h2>
-                    <section class="row recipe-header">
-                          <ul>
+                    <section class="row recipe-header" style="padding-left: 0px;">
+                          <ul class="recipe-header" style="padding-left: 0px;">
+
                             <li>Yorkshire Pudding</li>
                           </ul>
                     </section>
                 </div>
                 <div class="col-md-5">
                  <h2 class="colorblue">Tools</h2>
-                    <section class="row recipe-header">
-                    </section>
+                    <section class="row recipe-header" style="padding-left: 0px;">
+                          <ul class="recipe-header" style="padding-left: 0px;">
+
                 </div>
 
 <!-- STEP INSTRUCTIONS -->
