Applied new Hamburger and Nav Globally
Fixed Social in hamburger

Fixed Links in Nav and Hamburger

--- a/recipes/yorkshire-pudding-sage.html
+++ b/recipes/yorkshire-pudding-sage.html
@@ -862,7 +862,7 @@
     </div>
 	<!-- END FOOTER -->
     <!-- ms-site-container -->
-	<!-- BEGIN HAMBURGER MENU -->
+  <!-- BEGIN HAMBURGER MENU -->
     <div class="ms-slidebar sb-slidebar sb-left sb-style-overlay" id="ms-slidebar">
       <div class="sb-slidebar-container">
         <header class="ms-slidebar-header">
@@ -886,10 +886,10 @@
             <a class="link colorred" href="home.html">HOME</a>
           </li>
           <li>
-            <a href="host.html" class="link"> HOST </a>
+            <a href="category-host-main.html" class="link"> HOST </a>
           </li>
           <li>
-            <a href="cook.html" class="link"> COOK </a>
+            <a href="category-cook-main.html" class="link"> COOK </a>
           </li>          
           <li>
             <a href="references.html" class="link"> INDEX </a>
@@ -905,21 +905,21 @@
         <div class="ms-slidebar-social ms-slidebar-block">
           <h4 class="ms-slidebar-block-title">Social Links</h4>
           <div class="ms-slidebar-social">
-            <a href="javascript:void(0)" class="btn-circle btn-circle-raised btn-facebook">
+            <a href="https://www.facebook.com/ectlecta/" class="btn-circle btn-circle-raised btn-facebook">
               <i class="zmdi zmdi-facebook"></i>
               <span class="badge-pill badge-pill-pink">12</span>
               <div class="ripple-container"></div>
             </a>
-            <a href="javascript:void(0)" class="btn-circle btn-circle-raised btn-twitter">
+            <a href="https://www.pinterest.com/ectlecta/" class="btn-circle btn-circle-raised btn-pinterest">
               <i class="zmdi zmdi-twitter"></i>
               <span class="badge-pill badge-pill-pink">4</span>
               <div class="ripple-container"></div>
             </a>
-            <a href="javascript:void(0)" class="btn-circle btn-circle-raised btn-google">
+            <a href="https://www.youtube.com/channel/UC9nFjVraKTD-31_t9OCHEJQ?view_as=subscriber" class="btn-circle btn-circle-raised btn-youtube">
               <i class="zmdi zmdi-google"></i>
               <div class="ripple-container"></div>
             </a>
-            <a href="javascript:void(0)" class="btn-circle btn-circle-raised btn-instagram">
+            <a href="https://www.instagram.com/ectlecta/" class="btn-circle btn-circle-raised btn-instagram">
               <i class="zmdi zmdi-instagram"></i>
               <div class="ripple-container"></div>
             </a>
