--- a/category-page-master.html
+++ b/category-page-master.html
@@ -85,8 +85,7 @@
                                         </ul>       
                             -->
           </li>
-          <li class="nav-item dropdown dropdown-megamenu-container">
-                  <a href="category-cook-main.html" class="nav-link dropdown-toggle animated fadeIn animation-delay-7" data-toggle="dropdown" data-hover="dropdown" role="button" aria-haspopup="true" aria-expanded="false" data-name="component">COOK
+          <li class="nav-item dropdown dropdown-megamenu-container"> <a href="category-cook-main.html" class="nav-link dropdown-toggle animated fadeIn animation-delay-7" data-toggle="dropdown" data-hover="dropdown" role="button" aria-haspopup="true" aria-expanded="false" data-name="component">COOK
                   </a>                  
 
                             <!-- COOK DROP DOWN (HIDE UNTIL CONTENT)
@@ -211,6 +210,8 @@
      </nav>
 
 <!-- END NAV BAR -->
+
+   </head>
 
    </head>
 
@@ -463,10 +464,10 @@
             <a class="link colorred" href="home.html">HOME</a>
           </li>
           <li>
-            <a href="host.html" class="link"> HOST </a>
+            <a href="category-host-main.html" class="link"> HOST </a>
           </li>
           <li>
-            <a href="cook.html" class="link"> COOK </a>
+            <a href="category-cook-main.html" class="link"> COOK </a>
           </li>          
           <li>
             <a href="references.html" class="link"> INDEX </a>
@@ -482,21 +483,21 @@
         <div class="ms-slidebar-social ms-slidebar-block">
           <h4 class="ms-slidebar-block-title">Social Links</h4>
           <div class="ms-slidebar-social">
-            <a href="javascript:void(0)" class="btn-circle btn-circle-raised btn-facebook">
+            <a href="https://www.facebook.com/ectlecta/" class="btn-circle btn-circle-raised btn-facebook">
               <i class="zmdi zmdi-facebook"></i>
               <span class="badge-pill badge-pill-pink">12</span>
               <div class="ripple-container"></div>
             </a>
-            <a href="javascript:void(0)" class="btn-circle btn-circle-raised btn-twitter">
+            <a href="https://www.pinterest.com/ectlecta/" class="btn-circle btn-circle-raised btn-pinterest">
               <i class="zmdi zmdi-twitter"></i>
               <span class="badge-pill badge-pill-pink">4</span>
               <div class="ripple-container"></div>
             </a>
-            <a href="javascript:void(0)" class="btn-circle btn-circle-raised btn-google">
+            <a href="https://www.youtube.com/channel/UC9nFjVraKTD-31_t9OCHEJQ?view_as=subscriber" class="btn-circle btn-circle-raised btn-youtube">
               <i class="zmdi zmdi-google"></i>
               <div class="ripple-container"></div>
             </a>
-            <a href="javascript:void(0)" class="btn-circle btn-circle-raised btn-instagram">
+            <a href="https://www.instagram.com/ectlecta/" class="btn-circle btn-circle-raised btn-instagram">
               <i class="zmdi zmdi-instagram"></i>
               <div class="ripple-container"></div>
             </a>
@@ -506,6 +507,5 @@
     </div>
     <script src="assets/js/plugins.min.js"></script>
     <script src="assets/js/app.min.js"></script>
-    <script src="assets/js/portfolio.js"></script>
   </body>
 </html>
