Actually fixed Nav
Fixed Recipe Nav

--- a/category-cook-main.html
+++ b/category-cook-main.html
@@ -245,16 +245,12 @@
       <div class="material-background"></div>
       <div class="container">
         <div class="text-center mb-6">
-          <h1 class="no-m ms-site-title colorred center-block ms-site-title-lg mt-2 animated zoomInDown animation-delay-5">{FILL IN}</h1>
+          <h1 class="no-m ms-site-title colorred center-block ms-site-title-lg mt-2 animated zoomInDown animation-delay-5">What are you looking to cook?</h1>
         </div>
 
 <!-- FILTER CARD -->
 
         <div class="card d-none d-md-block">
-          <div class="card-header bg-primary">
-            <h3 class="card-title text-center colorred">
-              <i class="zmdi zmdi-filter-list"></i>What are you looking to cook?</h3>
-          </div>
           <div class="row no-m">
             <div class="col-lg-12 col-sm-12 no-pr no-pl">
               <h4 class="text-center no-mb">Categories</h4>
@@ -314,7 +310,7 @@
             <div class="row text-center" id="Container">
 
 <!-- ITEM START -->
-
+ <!-- ITEM-->
               <div class="col-md-4 col-sm-6 mix category-1">
                 <div class="card width-auto">
                   <figure class="ms-thumbnail ms-thumbnail-left">
@@ -328,7 +324,7 @@
                   </div>
                 </div>
               </div>
-              <!-- item -->
+ <!-- ITEM -->
               <div class="col-md-4 col-sm-6 mix category-1">
                 <div class="card width-auto">
                   <figure class="ms-thumbnail ms-thumbnail-left">
@@ -345,7 +341,7 @@
                   </div>
                 </div>
               </div>
-              <!-- item -->
+ <!-- item -->
               <div class="col-md-4 col-sm-6 mix category-1">
                 <div class="card width-auto">
                   <figure class="ms-thumbnail ms-thumbnail-left">
