--- a/recipe-master.html
+++ b/recipe-master.html
@@ -252,7 +252,7 @@
           <div class="container">
             <div class="text-center">
                                                                                                                               <!-- RECIPE Title -->
-              <h1 class="no-m ms-site-title color-white center-block ms-site-title-lg mt-2 animated zoomInDown animation-delay-5">[RECIPE NAME]</h1>
+              <h1 class="no-m ms-site-title color-white center-block ms-site-title-lg animated zoomInDown animation-delay-5" style="font-size: 7rem">[RECIPE NAME]</h1>
               <p class="lead lead-lg color-light text-center center-block mt-2 mw-800 text-uppercase fw-300 animated fadeInUp animation-delay-7 mb-4" style="padding-bottom: 1rem">
                                                                                                                               <!-- RECIPE Sub Title -->
                 <span class="colorred">[RECIPE SUB TITLE]</span></p>
