--- a/recipes/yorkshire-pudding-sage.html
+++ b/recipes/yorkshire-pudding-sage.html
@@ -18,7 +18,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
       <meta name="theme-color" content="#333">
-      <title>ectlecta - [RECIPE MASTER]</title>
+      <title>Yorkshire Pudding (Sage | Cheddar | Blue)</title>
       <meta name="description" content="Material Style Theme">
       <link rel="shortcut icon" href="assets/img/favicon.png?v=3">
       <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
@@ -258,10 +258,10 @@
 
   <!-- RECIPE NAME HEADER -->
 
-        <div class="ms-hero-page ms-hero-img-yp ms-hero-bg-recipe mb-4">
+        <div class="ms-hero-page ms-hero-bg-primary mb-4">
           <div class="container">
             <div class="text-center">
-              <h1 class="no-m ms-site-title color-white center-block ms-footbar-title mt-2 animated zoomInDown animation-delay-5" style="z-index: 555;">Yorshire Pudding</h1>
+              <h1 class="no-m ms-site-title color-white center-block ms-footbar-title animated zoomInDown animation-delay-5" style="z-index: 555; font-size: 7rem;">Yorkshire Pudding</h1>
               <p class="lead lead-lg color-light text-center center-block mt-2 mw-800 text-uppercase fw-300 animated fadeInUp animation-delay-7 mb-4" style="padding-bottom: 1rem">
                 <span class="colorred">Sage | Cheddar | Blue Cheese</span></p>
             </div>
@@ -273,6 +273,10 @@
       <div class="container container-full">
        <div class="col-md-12 card card-info wow fadeInUp">
          <section class="row">
+            <div class="card-block col-md-12" >
+              <img src="img/yorkshire_pudding/yp-cover.jpg" alt="" class="img-fluid" style=" max-height: 400px">
+             <hr class="color double">
+            </div>
           <div class="col-md-8" style="padding-right: 0px;">
             <div class="card-block" style="padding-right: 0px;">
              <h2 class="colorred">Ingredients</h2>
