Updated Navbar so current page is underlined, recropped carousel imgs... Updated readme.md

--- a/home.html
+++ b/home.html
@@ -49,12 +49,12 @@
                   <a href="home.html" class="nav-link animated fadeIn animation-delay-7" role="button" aria-haspopup="true" aria-expanded="false" data-name="home">HOME
                   </a>
                 </li>
-                <li class="nav-item dropdown active">
-                  <a href="category-host-main.html" class="nav-link animated fadeIn animation-delay-7" role="button" aria-haspopup="true" aria-expanded="false" data-name="home">HOST
+                <li class="nav-item dropdown">
+                  <a href="category-host-main.html" class="nav-link animated fadeIn animation-delay-7" role="button" aria-haspopup="true" aria-expanded="false" data-name="host">HOST
                   </a>
                 </li>
-                <li class="nav-item dropdown active">
-                  <a href="category-cook-main.html" class="nav-link animated fadeIn animation-delay-7" role="button" aria-haspopup="true" aria-expanded="false" data-name="home">COOK
+                <li class="nav-item dropdown">
+                  <a href="category-cook-main.html" class="nav-link animated fadeIn animation-delay-7" role="button" aria-haspopup="true" aria-expanded="false" data-name="cook">COOK
                   </a>
                 </li>
                             <!-- HOST DROP DOWN (HIDE UNTIL CONTENT)
@@ -212,15 +212,15 @@
 
                 </li>     
                 <li class="nav-item dropdown">
-                  <a href="index.html" class="nav-link dropdown-toggle animated fadeIn animation-delay-7" data-toggle="dropdown" data-hover="dropdown" role="button" aria-haspopup="true" aria-expanded="false" data-name="blog">INDEX
+                  <a href="home.html" class="nav-link animated fadeIn animation-delay-7" role="button" aria-haspopup="true" aria-expanded="false" data-name="index">INDEX
                   </a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a href="local.html" class="nav-link animated fadeIn animation-delay-7" role="button" aria-haspopup="true" aria-expanded="false" data-name="home">LOCAL
+                  <a href="local.html" class="nav-link animated fadeIn animation-delay-7" role="button" aria-haspopup="true" aria-expanded="false" data-name="local">LOCAL
                   </a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a href="travel.html" class="nav-link animated fadeIn animation-delay-7" role="button" aria-haspopup="true" aria-expanded="false" data-name="home">TRAVEL
+                  <a href="travel.html" class="nav-link animated fadeIn animation-delay-7" role="button" aria-haspopup="true" aria-expanded="false" data-name="travel">TRAVEL
                   </a>
                 </li>
               </ul>
@@ -301,7 +301,7 @@
 					</div></a>
                 </div>
                 <div class="carousel-item">
-                  <img src="assets/img/steaktacos.jpeg" class="img-fluid" alt="...">
+                  <img src="assets/img/steaktacos.jpg" class="img-fluid" alt="...">
                   <div class="carousel-caption-blog">
                     <h2 class="color-secondary">STEAK TACOS</h2>
                     <p class="d-none d-md-block" style="font-size: 2rem">beet tortilla | skirt steak | shallots | arugula | goat cheese</p>
