--- a/local.html
+++ b/local.html
@@ -45,16 +45,16 @@
             </div>
             <div class="collapse navbar-collapse" id="ms-navbar">
               <ul class="navbar-nav">
-                <li class="nav-item dropdown active">
+                <li class="nav-item dropdown">
                   <a href="home.html" class="nav-link animated fadeIn animation-delay-7" role="button" aria-haspopup="true" aria-expanded="false" data-name="home">HOME
                   </a>
                 </li>
-                <li class="nav-item dropdown active">
-                  <a href="category-host-main.html" class="nav-link animated fadeIn animation-delay-7" role="button" aria-haspopup="true" aria-expanded="false" data-name="home">HOST
+                <li class="nav-item dropdown">
+                  <a href="category-host-main.html" class="nav-link animated fadeIn animation-delay-7" role="button" aria-haspopup="true" aria-expanded="false" data-name="host">HOST
                   </a>
                 </li>
-                <li class="nav-item dropdown active">
-                  <a href="category-cook-main.html" class="nav-link animated fadeIn animation-delay-7" role="button" aria-haspopup="true" aria-expanded="false" data-name="home">COOK
+                <li class="nav-item dropdown">
+                  <a href="category-cook-main.html" class="nav-link animated fadeIn animation-delay-7" role="button" aria-haspopup="true" aria-expanded="false" data-name="cook">COOK
                   </a>
                 </li>
                             <!-- HOST DROP DOWN (HIDE UNTIL CONTENT)
@@ -212,15 +212,15 @@
 
                 </li>     
                 <li class="nav-item dropdown">
-                  <a href="index.html" class="nav-link dropdown-toggle animated fadeIn animation-delay-7" data-toggle="dropdown" data-hover="dropdown" role="button" aria-haspopup="true" aria-expanded="false" data-name="blog">INDEX
+                  <a href="home.html" class="nav-link animated fadeIn animation-delay-7" role="button" aria-haspopup="true" aria-expanded="false" data-name="index">INDEX
+                  </a>
+                </li>
+                <li class="nav-item dropdown active">
+                  <a href="local.html" class="nav-link animated fadeIn animation-delay-7" role="button" aria-haspopup="true" aria-expanded="false" data-name="local">LOCAL
                   </a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a href="local.html" class="nav-link animated fadeIn animation-delay-7" role="button" aria-haspopup="true" aria-expanded="false" data-name="home">LOCAL
-                  </a>
-                </li>
-                <li class="nav-item dropdown">
-                  <a href="travel.html" class="nav-link animated fadeIn animation-delay-7" role="button" aria-haspopup="true" aria-expanded="false" data-name="home">TRAVEL
+                  <a href="travel.html" class="nav-link animated fadeIn animation-delay-7" role="button" aria-haspopup="true" aria-expanded="false" data-name="travel">TRAVEL
                   </a>
                 </li>
               </ul>
