fixed  item cards in categoy files.

--- a/category-host-main.html
+++ b/category-host-main.html
@@ -518,5 +518,6 @@
     </div>
     <script src="assets/js/plugins.min.js"></script>
     <script src="assets/js/app.min.js"></script>
+    <script src="assets/js/portfolio.js"></script>
   </body>
 </html>
