--- a/category-page-master.html
+++ b/category-page-master.html
@@ -518,5 +518,6 @@
     </div>
     <script src="assets/js/plugins.min.js"></script>
     <script src="assets/js/app.min.js"></script>
+    <script src="assets/js/portfolio.js"></script>
   </body>
 </html>
