Added "../" to Nav and Hamburger for yorkshire pudding recipe so the links look in the right directory.
Removed index.html

fixed steaktaco.jpg

--- a/home.html
+++ b/home.html
@@ -691,7 +691,7 @@
               <div class="ripple-container"></div>
             </a>
             <a href="https://www.pinterest.com/ectlecta/" class="btn-circle btn-circle-raised btn-pinterest">
-              <i class="zmdi zmdi-twitter"></i>
+              <i class="zmdi zmdi-pintrest-box"></i>
               <span class="badge-pill badge-pill-pink">4</span>
               <div class="ripple-container"></div>
             </a>
