--- a/recipes/yorkshire-pudding-sage.html
+++ b/recipes/yorkshire-pudding-sage.html
@@ -46,15 +46,15 @@
             <div class="collapse navbar-collapse" id="ms-navbar">
               <ul class="navbar-nav">
                 <li class="nav-item dropdown">
-                  <a href="home.html" class="nav-link animated fadeIn animation-delay-7" role="button" aria-haspopup="true" aria-expanded="false" data-name="home">HOME
+                  <a href="../home.html" class="nav-link animated fadeIn animation-delay-7" role="button" aria-haspopup="true" aria-expanded="false" data-name="home">HOME
                   </a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a href="category-host-main.html" class="nav-link animated fadeIn animation-delay-7" role="button" aria-haspopup="true" aria-expanded="false" data-name="host">HOST
+                  <a href="../category-host-main.html" class="nav-link animated fadeIn animation-delay-7" role="button" aria-haspopup="true" aria-expanded="false" data-name="host">HOST
                   </a>
                 </li>
                 <li class="nav-item dropdown active">
-                  <a href="category-cook-main.html" class="nav-link animated fadeIn animation-delay-7" role="button" aria-haspopup="true" aria-expanded="false" data-name="cook">COOK
+                  <a href="../category-cook-main.html" class="nav-link animated fadeIn animation-delay-7" role="button" aria-haspopup="true" aria-expanded="false" data-name="cook">COOK
                   </a>
                 </li>
                             <!-- HOST DROP DOWN (HIDE UNTIL CONTENT)
@@ -212,15 +212,15 @@
 
                 </li>     
                 <li class="nav-item dropdown">
-                  <a href="home.html" class="nav-link animated fadeIn animation-delay-7" role="button" aria-haspopup="true" aria-expanded="false" data-name="index">INDEX
+                  <a href="../home.html" class="nav-link animated fadeIn animation-delay-7" role="button" aria-haspopup="true" aria-expanded="false" data-name="index">INDEX
                   </a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a href="local.html" class="nav-link animated fadeIn animation-delay-7" role="button" aria-haspopup="true" aria-expanded="false" data-name="local">LOCAL
+                  <a href="../local.html" class="nav-link animated fadeIn animation-delay-7" role="button" aria-haspopup="true" aria-expanded="false" data-name="local">LOCAL
                   </a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a href="travel.html" class="nav-link animated fadeIn animation-delay-7" role="button" aria-haspopup="true" aria-expanded="false" data-name="travel">TRAVEL
+                  <a href="../travel.html" class="nav-link animated fadeIn animation-delay-7" role="button" aria-haspopup="true" aria-expanded="false" data-name="travel">TRAVEL
                   </a>
                 </li>
               </ul>
@@ -897,22 +897,22 @@
         </header>
         <ul class="ms-slidebar-menu" id="slidebar-menu" role="tablist" aria-multiselectable="true">
           <li class="card">
-            <a class="link colorred" href="home.html">HOME</a>
+            <a class="link colorred" href="../home.html">HOME</a>
           </li>
           <li>
-            <a href="category-host-main.html" class="link"> HOST </a>
+            <a href="../category-host-main.html" class="link"> HOST </a>
           </li>
           <li>
-            <a href="category-cook-main.html" class="link"> COOK </a>
+            <a href="../category-cook-main.html" class="link"> COOK </a>
           </li>          
           <li>
-            <a href="references.html" class="link"> INDEX </a>
+            <a href="../references.html" class="link"> INDEX </a>
           </li>
           <li>
-            <a href="local.html" class="link"> LOCAL </a>
+            <a href="../local.html" class="link"> LOCAL </a>
           </li>
           <li>
-            <a href="travel.html" class="link"> TRAVEL </a>
+            <a href="../travel.html" class="link"> TRAVEL </a>
           </li>
 
         </ul>
@@ -925,12 +925,12 @@
               <div class="ripple-container"></div>
             </a>
             <a href="https://www.pinterest.com/ectlecta/" class="btn-circle btn-circle-raised btn-pinterest">
-              <i class="zmdi zmdi-twitter"></i>
+              <i class="zmdi zmdi-pinterest"></i>
               <span class="badge-pill badge-pill-pink">4</span>
               <div class="ripple-container"></div>
             </a>
             <a href="https://www.youtube.com/channel/UC9nFjVraKTD-31_t9OCHEJQ?view_as=subscriber" class="btn-circle btn-circle-raised btn-youtube">
-              <i class="zmdi zmdi-google"></i>
+              <i class="zmdi zmdi-youtube"></i>
               <div class="ripple-container"></div>
             </a>
             <a href="https://www.instagram.com/ectlecta/" class="btn-circle btn-circle-raised btn-instagram">
