- Fixed Hamburger on YP (relink JS assets) - Fixed Social Buttons on YP (needs to be ported universally) - Adjusted Content for YP recipes/img/yorkshire_pudding/yp-done - Added img assets for YP recipe - Added img assets for COOK cat page - Added Cards and overlay content for COOK cat page - Adjusted filter style for COOK cat page (Categories still need to be setup for cards, also our cats dont match what I tossed up) - Adjusted plugin.min.css to change youtube play button colors

--- a/recipes/yorkshire-pudding-sage.html
+++ b/recipes/yorkshire-pudding-sage.html
@@ -346,13 +346,13 @@
 
         <div class="col-md-5">
         <div class="jadczak-class">
-         <div>
+         <!--<div>
           <article class="card card-primary timeline-center-item left wow slideInLeftTiny">
             <div class="card-block">
             <div><img src="img/yorkshire_pudding/yp-ing.jpg" alt class="img-fluid"></div>
             </div>
           </article>
-           </div>
+           </div>-->
            <div>
           <article class="card card-primary timeline-center-item left wow slideInLeftTiny">
             <div class="card-block">
@@ -440,13 +440,13 @@
             </div>
           </article>
            </div>
-           <div>
+           <!--<div>
           <article class="card card-primary timeline-center-item left wow slideInLeftTiny">
             <div class="card-block">
             <img src="img/yorkshire_pudding/blend.gif" alt="" class="img-fluid">
             </div>
           </article>
-           </div>
+           </div>-->
         </div>
         </div>
 
@@ -561,14 +561,7 @@
          <div>
           <article class="card card-primary timeline-center-item left wow slideInLeftTiny">
             <div class="card-block">
-            <div data-type="youtube" data-video-id="9ZfN87gSjvI"></div>
-            </div>
-          </article>
-           </div>
-           <div>
-          <article class="card card-primary timeline-center-item left wow slideInLeftTiny">
-            <div class="card-block">
-            <img src="assets/img/pastrami.gif" alt="" class="img-fluid">
+            <div><img src="img/yorkshire_pudding/yp-tallow-pan.gif" alt class="img-fluid"></div>
             </div>
           </article>
            </div>
@@ -660,14 +653,7 @@
          <div>
           <article class="card card-primary timeline-center-item left wow slideInLeftTiny">
             <div class="card-block">
-            <div data-type="youtube" data-video-id="9ZfN87gSjvI"></div>
-            </div>
-          </article>
-           </div>
-           <div>
-          <article class="card card-primary timeline-center-item left wow slideInLeftTiny">
-            <div class="card-block">
-            <img src="assets/img/pastrami.gif" alt="" class="img-fluid">
+            <div data-type="youtube" data-video-id="qXB3FDdS70"></div>
             </div>
           </article>
            </div>
@@ -753,17 +739,10 @@
 
         <div class="col-md-5">
         <div class="jadczak-class">
-         <div>
+          <div>
           <article class="card card-primary timeline-center-item left wow slideInLeftTiny">
             <div class="card-block">
-            <div data-type="youtube" data-video-id="9ZfN87gSjvI"></div>
-            </div>
-          </article>
-           </div>
-           <div>
-          <article class="card card-primary timeline-center-item left wow slideInLeftTiny">
-            <div class="card-block">
-            <img src="assets/img/pastrami.gif" alt="" class="img-fluid">
+            <div><img src="img/yorkshire_pudding/yp-done.jpg" alt class="img-fluid"></div>
             </div>
           </article>
            </div>
@@ -897,22 +876,22 @@
         </header>
         <ul class="ms-slidebar-menu" id="slidebar-menu" role="tablist" aria-multiselectable="true">
           <li class="card">
-            <a class="link colorred" href="../home.html">HOME</a>
+            <a class="link colorred" href="home.html">HOME</a>
           </li>
           <li>
-            <a href="../category-host-main.html" class="link"> HOST </a>
+            <a href="category-host-main.html" class="link"> HOST </a>
           </li>
           <li>
-            <a href="../category-cook-main.html" class="link"> COOK </a>
+            <a href="category-cook-main.html" class="link"> COOK </a>
           </li>          
           <li>
-            <a href="../references.html" class="link"> INDEX </a>
+            <a href="references.html" class="link"> INDEX </a>
           </li>
           <li>
-            <a href="../local.html" class="link"> LOCAL </a>
+            <a href="local.html" class="link"> LOCAL </a>
           </li>
           <li>
-            <a href="../travel.html" class="link"> TRAVEL </a>
+            <a href="travel.html" class="link"> TRAVEL </a>
           </li>
 
         </ul>
@@ -920,28 +899,31 @@
           <h4 class="ms-slidebar-block-title">Social Links</h4>
           <div class="ms-slidebar-social">
             <a href="https://www.facebook.com/ectlecta/" class="btn-circle btn-circle-raised btn-facebook">
-              <i class="zmdi zmdi-facebook"></i>
+              <i class="zmdi1 zmdi-facebook"></i>
               <span class="badge-pill badge-pill-pink">12</span>
               <div class="ripple-container"></div>
             </a>
             <a href="https://www.pinterest.com/ectlecta/" class="btn-circle btn-circle-raised btn-pinterest">
-              <i class="zmdi zmdi-pinterest"></i>
+              <i class="zmdi1 zmdi-pinterest-box"></i>
               <span class="badge-pill badge-pill-pink">4</span>
               <div class="ripple-container"></div>
             </a>
             <a href="https://www.youtube.com/channel/UC9nFjVraKTD-31_t9OCHEJQ?view_as=subscriber" class="btn-circle btn-circle-raised btn-youtube">
-              <i class="zmdi zmdi-youtube"></i>
+              <i class="zmdi1 zmdi-youtube-play"></i>
               <div class="ripple-container"></div>
             </a>
             <a href="https://www.instagram.com/ectlecta/" class="btn-circle btn-circle-raised btn-instagram">
-              <i class="zmdi zmdi-instagram"></i>
+              <i class="zmdi1 zmdi-instagram"></i>
               <div class="ripple-container"></div>
             </a>
           </div>
         </div>
       </div>
     </div>
-    <script src="assets/js/plugins.min.js"></script>
-    <script src="assets/js/app.min.js"></script>
+
+
+
+    <script src="../assets/js/plugins.min.js"></script>
+    <script src="../assets/js/app.min.js"></script>
   </body>
 </html>
