--- a/category-cook-main.html
+++ b/category-cook-main.html
@@ -242,16 +242,16 @@
 
 <!-- PAGE TEXT OVERLAY -->
 
-      <div class="material-background"></div>
+      <div class="material-background-cat"></div>
       <div class="container">
         <div class="text-center mb-6">
           <h1 class="no-m ms-site-title colorred center-block ms-site-title-lg mt-2 animated zoomInDown animation-delay-5">What are you looking to cook?</h1>
         </div>
-
-<!-- FILTER CARD -->
-
+<!-- PAGE CONTENT START -->
         <div class="card d-none d-md-block">
           <div class="row no-m">
+
+<!-- FILTER CARD (Lets Hide until 25 recipes) --> 
             <div class="col-lg-12 col-sm-12 no-pr no-pl">
               <h4 class="text-center no-mb">Categories</h4>
               <ul class="nav nav-tabs nav-tabs-transparent indicator-primary nav-tabs-full nav-tabs-7" role="tablist">
@@ -279,7 +279,7 @@
                 </li>
               </ul>
             </div>
-            <!--
+          <!--
             <div class="col-lg-2 col-sm-6 no-pr no-pl">
               <h4 class="text-center no-mb">Columns</h4>
               <ul class="nav nav-tabs nav-tabs-transparent indicator-primary nav-tabs-full nav-tabs-4" role="tablist">
@@ -298,9 +298,9 @@
                 </li>
               </ul>
             </div>
-            -->
+          -->
 
-          </div>
+          </div>  
         </div>
 
 <!-- GRID ITEMS -->
@@ -311,11 +311,17 @@
 
 <!-- ITEM START -->
  <!-- ITEM-->
-              <div class="col-md-4 col-sm-6 mix category-1">
+              <div class="col-md-4 col-sm-6 mix category-6">
                 <div class="card width-auto">
                   <figure class="ms-thumbnail ms-thumbnail-left">
                     <a href="recipes/yorkshire-pudding-sage.html">
-                    <img src="recipes/img/yorkshire_pudding/yp-done.jpg" alt="" class="img-fluid">
+                    <img src="assets/img/yp-done.jpg" alt="" class="img-fluid">
+                     <figcaption class="ms-thumbnail-caption text-center">
+                      <div class="ms-thumbnail-caption-content">
+                        <h2 class="ms-thumbnail-caption-title mb-2">Yorkshire Pudding</h2>
+                        <h4 class="ms-thumbnail-caption-title mb-2">Sage | Cheddar | Blue</h4>
+                      </div>
+                     </figcaption>
                     </a>
                   </figure>
                   <div class="card-block text-center portfolio-item-caption d-none">
@@ -325,13 +331,14 @@
                 </div>
               </div>
  <!-- ITEM -->
-              <div class="col-md-4 col-sm-6 mix category-1">
+              <div class="col-md-4 col-sm-6 mix category-3">
                 <div class="card width-auto">
                   <figure class="ms-thumbnail ms-thumbnail-left">
-                    <img src="assets/img/mintpestocover.jpg" alt="" class="img-fluid">
+                    <img src="assets/img/hen-of-wood-done.jpg" alt="" class="img-fluid">
                     <figcaption class="ms-thumbnail-caption text-center">
                       <div class="ms-thumbnail-caption-content">
-                        <h4 class="ms-thumbnail-caption-title mb-2">Lorem ipsum dolor</h4>
+                        <h2 class="ms-thumbnail-caption-title mb-2">Hen of the Wood</h2>
+                        <h4 class="ms-thumbnail-caption-title mb-2">Chicken | King Trumpet Mushrooms | Greens</h4>
                       </div>
                     </figcaption>
                   </figure>
@@ -348,7 +355,128 @@
                     <img src="assets/img/mintpestocover.jpg" alt="" class="img-fluid">
                     <figcaption class="ms-thumbnail-caption text-center">
                       <div class="ms-thumbnail-caption-content">
-                        <h4 class="ms-thumbnail-caption-title mb-2">Lorem ipsum dolor</h4>
+                        <h2 class="ms-thumbnail-caption-title mb-2">Mint and Lamb</h2>
+                        <h4 class="ms-thumbnail-caption-title mb-2">Mint Pesto | Lamb | Pasta</h4>
+                        </a>
+                      </div>
+                    </figcaption>
+                  </figure>
+                  <div class="card-block text-center portfolio-item-caption d-none">
+                    <h3 class="color-primary no-mt">Lorem ipsum dolor</h3>
+                    <p>Explicabo consequatur quidem praesentium quas qui eius ina Cupiditate ratione sint.</p>
+                  </div>
+                </div>
+              </div>
+              <!-- item -->
+ <!-- item -->
+              <div class="col-md-4 col-sm-6 mix category-1">
+                <div class="card width-auto">
+                  <figure class="ms-thumbnail ms-thumbnail-left">
+                    <img src="assets/img/lamb-shank-seared.jpg" alt="" class="img-fluid">
+                    <figcaption class="ms-thumbnail-caption text-center">
+                      <div class="ms-thumbnail-caption-content">
+                        <h2 class="ms-thumbnail-caption-title mb-2">Lamb Shank</h2>
+                        <h4 class="ms-thumbnail-caption-title mb-2">Recipe Coming Soon</h4>
+                        </a>
+                      </div>
+                    </figcaption>
+                  </figure>
+                  <div class="card-block text-center portfolio-item-caption d-none">
+                    <h3 class="color-primary no-mt">Lorem ipsum dolor</h3>
+                    <p>Explicabo consequatur quidem praesentium quas qui eius ina Cupiditate ratione sint.</p>
+                  </div>
+                </div>
+              </div>
+              <!-- item -->
+ <!-- item -->
+              <div class="col-md-4 col-sm-6 mix category-1">
+                <div class="card width-auto">
+                  <figure class="ms-thumbnail ms-thumbnail-left">
+                    <img src="assets/img/pork-carrots.jpg" alt="" class="img-fluid">
+                    <figcaption class="ms-thumbnail-caption text-center">
+                      <div class="ms-thumbnail-caption-content">
+                        <h2 class="ms-thumbnail-caption-title mb-2">Pork Tenderloin</h2>
+                        <h4 class="ms-thumbnail-caption-title mb-2">Carmelized Carrots | Miso | Cilantro </h4>
+                        </a>
+                      </div>
+                    </figcaption>
+                  </figure>
+                  <div class="card-block text-center portfolio-item-caption d-none">
+                    <h3 class="color-primary no-mt">Lorem ipsum dolor</h3>
+                    <p>Explicabo consequatur quidem praesentium quas qui eius ina Cupiditate ratione sint.</p>
+                  </div>
+                </div>
+              </div>
+              <!-- item -->
+ <!-- item -->
+              <div class="col-md-4 col-sm-6 mix category-1">
+                <div class="card width-auto">
+                  <figure class="ms-thumbnail ms-thumbnail-left">
+                    <img src="assets/img/veg-stock.jpg" alt="" class="img-fluid">
+                    <figcaption class="ms-thumbnail-caption text-center">
+                      <div class="ms-thumbnail-caption-content">
+                        <h2 class="ms-thumbnail-caption-title mb-2">Vegetable Stock</h2>
+                        <h4 class="ms-thumbnail-caption-title mb-2">Vegetable Scraps | Water | Flair</h4>
+                        </a>
+                      </div>
+                    </figcaption>
+                  </figure>
+                  <div class="card-block text-center portfolio-item-caption d-none">
+                    <h3 class="color-primary no-mt">Lorem ipsum dolor</h3>
+                    <p>Explicabo consequatur quidem praesentium quas qui eius ina Cupiditate ratione sint.</p>
+                  </div>
+                </div>
+              </div>
+              <!-- item -->
+ <!-- item -->
+              <div class="col-md-4 col-sm-6 mix category-1">
+                <div class="card width-auto">
+                  <figure class="ms-thumbnail ms-thumbnail-left">
+                    <img src="assets/img/veg-stock.jpg" alt="" class="img-fluid">
+                    <figcaption class="ms-thumbnail-caption text-center">
+                      <div class="ms-thumbnail-caption-content">
+                        <h2 class="ms-thumbnail-caption-title mb-2">Chork Stock</h2>
+                        <h4 class="ms-thumbnail-caption-title mb-2">Pork | Chicken | Onion</h4>
+                        </a>
+                      </div>
+                    </figcaption>
+                  </figure>
+                  <div class="card-block text-center portfolio-item-caption d-none">
+                    <h3 class="color-primary no-mt">Lorem ipsum dolor</h3>
+                    <p>Explicabo consequatur quidem praesentium quas qui eius ina Cupiditate ratione sint.</p>
+                  </div>
+                </div>
+              </div>
+              <!-- item -->             
+ <!-- item -->
+              <div class="col-md-4 col-sm-6 mix category-1">
+                <div class="card width-auto">
+                  <figure class="ms-thumbnail ms-thumbnail-left">
+                    <img src="assets/img/sausage-1.jpg" alt="" class="img-fluid">
+                    <figcaption class="ms-thumbnail-caption text-center">
+                      <div class="ms-thumbnail-caption-content">
+                        <h2 class="ms-thumbnail-caption-title mb-2">Pork Sausage</h2>
+                        <h4 class="ms-thumbnail-caption-title mb-2">Gouda | Beer | Garlic</h4>
+                        </a>
+                      </div>
+                    </figcaption>
+                  </figure>
+                  <div class="card-block text-center portfolio-item-caption d-none">
+                    <h3 class="color-primary no-mt">Lorem ipsum dolor</h3>
+                    <p>Explicabo consequatur quidem praesentium quas qui eius ina Cupiditate ratione sint.</p>
+                  </div>
+                </div>
+              </div>
+              <!-- item -->
+ <!-- item -->
+              <div class="col-md-4 col-sm-6 mix category-1">
+                <div class="card width-auto">
+                  <figure class="ms-thumbnail ms-thumbnail-left">
+                    <img src="assets/img/seabass-tomato.jpg" alt="" class="img-fluid">
+                    <figcaption class="ms-thumbnail-caption text-center">
+                      <div class="ms-thumbnail-caption-content">
+                        <h2 class="ms-thumbnail-caption-title mb-2">Sea Bass</h2>
+                        <h4 class="ms-thumbnail-caption-title mb-2">Tomato | Watermelon | Watercress</h4>
                         </a>
                       </div>
                     </figcaption>
