--- a/category-host-main.html
+++ b/category-host-main.html
@@ -242,22 +242,19 @@
 
 <!-- PAGE TEXT OVERLAY -->
 
-      <div class="material-background"></div>
+      <div class="material-background-cat"></div>
       <div class="container">
         <div class="text-center mb-6">
-          <h1 class="no-m ms-site-title colorred center-block ms-site-title-lg mt-2 animated zoomInDown animation-delay-5">{FILL IN}</h1>
+          <h1 class="no-m ms-site-title colorred center-block ms-site-title-lg mt-2 animated zoomInDown animation-delay-5">Having Company?</h1>
         </div>
 
 <!-- FILTER CARD -->
 
         <div class="card d-none d-md-block">
-          <div class="card-header bg-primary">
-            <h3 class="card-title text-center colorred">
-              <i class="zmdi zmdi-filter-list"></i>What are you looking to cook?</h3>
-          </div>
+
           <div class="row no-m">
             <div class="col-lg-12 col-sm-12 no-pr no-pl">
-              <h4 class="text-center no-mb">Categories</h4>
+              <h4 class="text-center no-mb">What kind of party are you throwing?</h4>
               <ul class="nav nav-tabs nav-tabs-transparent indicator-primary nav-tabs-full nav-tabs-7" role="tablist">
                 <li class="nav-item">
                   <a class="nav-link withoutripple no-pl no-pr filter active" data-filter="all" href="#cat" aria-controls="cat" role="tab" data-toggle="tab">ALL</a>
